css/main.scss
---
---

@charset "utf-8";

/*** VARIABLES ***/

$base-font-family: 'Open Sans', Helvetica, Arial, sans-serif;
$headline-font-family: 'Merriweather', serif;
$base-font-size:   18px;
$font-ratio:  1.3;
$small-font-ratio:  1.2;
$small-font-size:   $base-font-size / $font-ratio;
$base-line-height: 1.5;

$spacing-unit:     30px;

$white-color: #ffffff;
$offwhite-color: #fdfdfd;
$grey-color: #828282;
$black-color: #111111;

$blue-color: #65B3E0;
$red-color: #CE324A;


/*** COLOR ALIAS ***/
$text-color:       $black-color;
$background-color: $white-color;
$brand-color:      $red-color;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 15%);


/*** WIDTH OF CONTENT AREA ***/
$content-width:    1200px;
$on-palm:          600px;
$on-laptop:        800px;

@mixin media-query($device) {
    @media screen and (max-width: $device) {
        @content;
    }
}


/*** GENERAL ***/
body {
  position: relative;
  margin: 0;
  padding-bottom: 12rem;
  min-height: 100%;
}

html {
  height: 100%;
  box-sizing: border-box;
}

strong {
    font-weight:bold;
}

a {
    color: $blue-color;
    font-weight: bold;
}

a:hover {
    color: #4883a5;
}

h1 {
    font-weight:bold;
}

h2 {
    font-weight: bold;
}

h3 {
    font-weight: bold;
}

.page-content section {
    margin-bottom: 4rem;
}

.centered {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 250px;
    padding: 10px;
}

.break-word {
    word-wrap: break-word;
}


/*** NAV ***/

.site-header .logo img {
    height: 3rem;
}

.site-header {
    border-top: 5px solid #CE324A;
    border-bottom: 1px solid #e8e8e8;
    min-height: 56px;
    padding: 1rem;
    position: relative;

    ul li {
        display: inline;
        text-decoration: none;
        margin: 0 0.5rem;

        a {
            text-decoration: none;
        }
    }
}


.site-nav {
    float: right;
    line-height: 56px;
}


/*** FOOTER ***/

.site-footer {
    background: #e8e8e8;
    position: absolute;
    color: #111;
    box-sizing: border-box;
    right: 0;
    bottom: 0;
    left: 0;
}

/*** PROJECTS PAGE ***/

.thumb {
    border: solid #000;
    border-width: 1px;
    border-radius: 10px;
    padding: 10px;
    display: inline-block;
}

.cfbgrid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: auto;
    grid-gap: 10px;

    .cfbcol-4 {
        grid-column: span 4;
    }
}

.leaderpix {
    width: 150px;
    height: 150px;
    overflow: hidden;
}

// Custom Classes for codeforamerica.org
.project {
    padding: 10px;
    border-color:black;
    border-width: 1px;
    border-style: solid;
    background-color: #f5f5f5;
}
    .em {
    font-style: italic;
}
    .small {
    font-size: 80%;
}
    .elevatorPitch {
    line-height: 1.25;
    @extend .small;
    @extend .em;
}
    .spacer-0 {
    margin-bottom: 0px;
}
    .spacer-10 {
    margin-bottom: 10px;
}
    .spacer-30 {
    margin-bottom: 30px;
}

@media screen and (min-width: $on-palm) {
    .cfbgrid .cfbcol-4 {
        grid-column: span 5;
    }
}

@media screen and (min-width: $on-laptop) {
    .cfbgrid .cfbcol-4 {
        grid-column: span 4;
    }
}

@media screen and (min-width: 1400px) {
    .cfbgrid .cfbcol-4 {
        grid-column: span 3;
    }
}

@media screen and (min-width: 1600px) {
    .cfbgrid .cfbcol-4 {
        grid-column: span 2;
    }
}

@media screen and (min-width: 1900px) {
    .cfbgrid .cfbcol-4 {
        grid-column: span 2;
    }
}


/*** IMPORT PARTIALS FROM 'SASS_DIR' (defaults to '_sass') ***/
@import
    "base",
    "buttons",
    "lists",
    "forms",
    "page-link-nav",
    "components",
    "jobs",
    "syntax-highlighting"
;

